# pallas-plugin-protocol

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-27-protocol-optimization.md
src/pallas_plugin_protocol/: __init__.py  account_batch.py  account_batch_ops.py  account_migration.py  config.py  config_manager.py  contract.py  docker_cli.py  docker_onebot_host.py  importer.py  instance_web_proxy.py  launch_manager.py  linux_docker.py  service.py  snowluma_config.py  snowluma_docker.py  snowluma_health.py  snowluma_host_deps.py  snowluma_qr_capture.py  snowluma_runtime_ops.py  snowluma_runtime_registry.py  snowluma_webui_client.py
src/pallas_plugin_protocol/backends/: __init__.py  napcat.py  protocol.py  snowluma.py
src/pallas_plugin_protocol/platform/: __init__.py  base.py  posix.py  windows.py
src/pallas_plugin_protocol/runtime/: __init__.py  installer.py  snowluma_installer.py  tag_paths.py
src/pallas_plugin_protocol/web/: __init__.py  contract.py  login_assets.py  pages.py  routes.py  shell_nav_icons.py
src/pallas_plugin_protocol/web/pages_pkg/: __init__.py  page_account.py  page_assets.py  page_dashboard.py  page_import.py  page_new.py  page_settings.py  shell_js.py  shell_layout.py
src/pallas_plugin_protocol/web/static/pallas_ui/: console-shared.css  fonts.css  shell-protocol.css  shell.css
src/pallas_plugin_relogin_bot/: __init__.py  service.py
src/pallas_plugin_relogin_forward/: __init__.py
tests/: test_account_batch.py  test_account_batch_ops.py  test_account_config_manager.py  test_account_runtime_switch.py  test_instance_web_proxy.py  test_protocol_web_legacy_redirects.py  test_relogin_risk_prompt.py  test_runtime_profile_prune.py  test_snowluma_config_docker.py  test_snowluma_docker_production.py  test_snowluma_production.py  test_snowluma_qr_capture.py  test_snowluma_runtime_registry.py  test_snowluma_webui_client.py
tools/: login_snowluma_account.py  migrate_napcat_to_snowluma.py  test_snowluma_qr_capture_e2e.py
