[project]
name = "pallas-plugin-protocol"
version = "4.0.7"
description = "Pallas-Bot 官方扩展：NapCat/SnowLuma 协议端管理、牛牛重新上号与分片转发。"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "nonebot2>=2.4.0",
    "nonebot-adapter-onebot>=2.4.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pallas_plugin_protocol", "src/pallas_plugin_relogin_bot", "src/pallas_plugin_relogin_forward"]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []
pallas-plugin-protocol = ['pallas_plugin_protocol']
pallas-plugin-relogin-bot = ['pallas_plugin_relogin_bot']
pallas-plugin-relogin-forward = ['pallas_plugin_relogin_forward']

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{ name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }]
