[project]
name = "pallas-plugin-protocol"
version = "4.0.29"
description = "Pallas-Bot 官方扩展：NapCat/SnowLuma 协议端管理、牛牛重新上号与分片转发。"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "nonebot2[fastapi]>=2.4.0",
    "nonebot-adapter-onebot>=2.4.6",
    "httpx>=0.28.1",
    "pydantic>=2.0,<3",
    "pillow>=10.0",
    "pyzbar>=0.1.9",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/pallas_plugin_protocol", "src/pallas_plugin_relogin_bot", "src/pallas_plugin_relogin_forward"]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []
pallas-plugin-protocol = ['pallas_plugin_protocol']
pallas-plugin-relogin-bot = ['pallas_plugin_relogin_bot']
pallas-plugin-relogin-forward = ['pallas_plugin_relogin_forward']

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{ name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }]
